fixed scrollbar and width

--- a/src/Components/SearchableCountryCodes/searchable-country-codes.scss
+++ b/src/Components/SearchableCountryCodes/searchable-country-codes.scss
@@ -41,6 +41,9 @@
     box-shadow: 0px 9px 12px 1px rgba(0, 0, 0, 0.08);
     padding: 6px 6px 6px 6px;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 
     @media only screen and (max-width: 450px) {
         width: calc(100% - 52px);
@@ -50,16 +53,10 @@
         display: flex;
         align-items: center;
         height: 35px;
-        position: fixed;
-        margin-top: -6px;
         padding-top: 3px;
         background-color: #fff;
-        width: 332px;
+        width: calc(100% - 9px);
         border-bottom: 2px solid rgba(239, 239, 239, 1);
-
-        @media only screen and (max-width: 450px) {
-            width: calc(100% - 55px);
-        }
 
         .searchable-country-codes-search-icon-container {
             display: inline-flex;
@@ -88,7 +85,7 @@
             letter-spacing: 1px;
             text-align: left;
             margin-left: 4px;
-            width: calc(100% - 24px);
+            width: calc(100% - 30px);
         }
 
         .searchable-country-codes-search-input:focus {
@@ -99,45 +96,53 @@
 
     hr.country-codes-list-divider-border {
         border: 1px solid rgba(239, 239, 239, 1);
+        margin-right: 6px;
     }
 
-    .country-codes-list-item-single {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        padding: 10px 0 10px 10px;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: 16.8px;
-        text-align: left;
-        cursor: pointer;
-        user-select: none;
-        -webkit-user-select: none;
 
-        .country-codes-list-item-code-num {
-            width: 35px;
-            margin-right: 16px;
+    .country-codes-list-container {
+        height: 110px;
+        overflow: auto;
+
+        .country-codes-list-item-single {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 10px 0 10px 10px;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 16.8px;
+            text-align: left;
+            cursor: pointer;
+            user-select: none;
+            -webkit-user-select: none;
+            margin-right: 6px;
+    
+            .country-codes-list-item-code-num {
+                width: 35px;
+                margin-right: 16px;
+            }
+    
+            .country-codes-list-item-flag {
+                height: 14px;
+                width: 24px;
+                pointer-events: none;
+            }
+    
+            .country-codes-list-item-name {
+                margin-left: 11px;
+            }
         }
-
-        .country-codes-list-item-flag {
-            height: 14px;
-            width: 24px;
-            pointer-events: none;
+    
+        .country-codes-list-item-single:hover {
+            background-color: rgb(11, 163, 214);
+            color: #fff; 
+        } 
+    
+        .country-codes-list-item-single-active,
+        .country-codes-list-item-single-active:hover {
+            background-color: rgb(5, 131, 173);
+            color: #fff; 
         }
-
-        .country-codes-list-item-name {
-            margin-left: 11px;
-        }
-    }
-
-    .country-codes-list-item-single:hover {
-        background-color: rgb(11, 163, 214);
-        color: #fff; 
-    } 
-
-    .country-codes-list-item-single-active,
-    .country-codes-list-item-single-active:hover {
-        background-color: rgb(5, 131, 173);
-        color: #fff; 
     }
 }
